
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/utilitis utilitis)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/game game)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/states states)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/graphic_components graphic_components)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/event_manager event_manager)